listings/ch04-understanding-ownership/no-listing-12-immutable-and-mutable-not-allowed/output.txt
$ cargo run
   Compiling ownership v0.1.0 (file:///progetti/ownership)
error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
 --> src/main.rs:7:14
  |
5 |     let r1 = &s;      // nessun problema
  |              -- immutable borrow occurs here
6 |     let r2 = &s;      // nessun problema
7 |     let r3 = &mut s;  // GROSSO PROBLEMA
  |              ^^^^^^ mutable borrow occurs here
8 |
9 |     println!("{r1}, {r2}, e {r3}");
  |                -- immutable borrow later used here

For more information about this error, try `rustc --explain E0502`.
error: could not compile `ownership` (bin "ownership") due to 1 previous error
